<resources>
    <string name="app_name">Dat.ee</string>
    <string name="welcome">Find your soul mate.</string>
    <string name="login">Log-in</string>
    <string name="register">Register</string>
    <string name="match">Start Matching</string>
    <string name="waiting_verification">Please wait while we verify your identity</string>
    <string name="match_cooling_down">Come here for matching tomorrow</string>
    <string name="photo_gallery">Photo Gallery</string>

    <!-- Registration -->
    <string name="reg_email">Email</string>
    <string name="reg_passwd">Password</string>
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_age">Age</string>
    <string name="reg_gender">Biological Gender</string>
    <string name="reg_gender_male">Male</string>
    <string name="reg_gender_female">Female</string>
    <string name="reg_success">Registration successful. Please log-in with your account details.</string>

    <!-- Login -->
    <string name="login_email">Email</string>
    <string name="login_passwd">Password</string>

    <!-- Photo Upload -->
    <string name="upp_upload_photos">Upload Photos</string>
    <string name="upp_already_uploaded">You have uploaded %d of %d (required) photos.</string>
    <string name="upp_not_enough">You have to upload %d photos before leaving.</string>

    <!-- Assessment / Matching Preferences -->
    <string name="self_assessment">Self-Assessment</string>
    <string name="self_assessment_descr">Please rate yourself for the following traits.</string>
    <string name="matching_preferences">Matching Preferences</string>
    <string name="matching_preferences_descr">How would you like your partner to be in the following aspects?</string>
    <string name="mpref_romance">Romance</string>
    <string name="mpref_openness">Openness</string>
    <string name="mpref_warmheartedness">Warmheartedness</string>
    <string name="mpref_gender">Gender</string>
    <string name="mpref_min_age">Minimum Age</string>
    <string name="mpref_max_age">Maximum Age</string>

    <!-- Rating -->
    <string name="rating_descr">Give your rating for the following user:</string>

    <!-- Match -->
    <string name="match_reject">Reject</string>
    <string name="match_photos">Photos</string>
    <string name="match_descr">
        You have been matched with %s %s (age %d) from %s, %s, whose biological gender is %s. Please choose if you would like to accept or reject this match.\n
        \n
        Note that if you choose to accept, you will need to provide information on when and where you are available, so that a proper date can be set up. However, there is no guarantee that the other person you are matched with will choose to accept &#8212; if ANY of you rejected, this match will be invalidated.\n
        \n
        If you choose to reject, then no new match can be made within the same day.
    </string>

    <string name="invalid">Invalid %s</string>
    <string name="request_failure">An unknown error occurred during request</string>
    <string name="password_weak">Password too weak</string>
    <string name="login_failure">Failed to log in. Please check the validity of email / password pair.</string>
    <string name="refresh_failure">You are logged out from server. Please log-in again.</string>
    <string name="please_wait">Just a minute...</string>
    <string name="choose_photo">Choose a picture</string>
    <string name="please_fill_in_all">Please fill in all fields.</string>
</resources>
