<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="center"
              android:paddingTop="20dp">
    <android.support.design.widget.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_reg_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_passwd"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_reg_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_first_name"
                android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_reg_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_last_name"
                android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_reg_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_age"
                android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>
    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RadioButton android:id="@+id/reg_gender_male"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingEnd="2sp"
                     android:text="@string/reg_gender_male"/>
        <RadioButton android:id="@+id/reg_gender_female"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/reg_gender_female"
                     android:checked="true"/>
    </RadioGroup>
</LinearLayout>