<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?attr/colorPrimary">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
                android:text="@string/welcome"
                android:fontFamily="sans-serif-light"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_launcher_foreground"/>
        <Button
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:background="@drawable/button_bg"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:background="@drawable/button_bg"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</FrameLayout>