<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/mpref_root"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpref_romance"
            android:layout_marginBottom="10dp"/>
    <RatingBar
            android:id="@+id/mpref_romance"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:clickable="true"
            android:isIndicator="false"
            android:layout_marginBottom="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpref_openness"
            android:layout_marginBottom="10dp"/>
    <RatingBar
            android:id="@+id/mpref_openness"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:clickable="true"
            android:isIndicator="false"
            android:layout_marginBottom="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpref_warmheartedness"
            android:layout_marginBottom="10dp"/>
    <RatingBar
            android:id="@+id/mpref_warmheartedness"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:clickable="true"
            android:isIndicator="false"
            android:layout_marginBottom="10dp"/>
</LinearLayout>